syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = "../proto";

service ClusterService {
  rpc GetNodeInfo(NodeInfoRequest) returns (NodeInfoResponse) {}
  rpc ForwardJoinClusterRequest(JoinClusterRequest)returns(google.protobuf.Empty){}
  rpc JoinCluster(JoinClusterRequest)returns(google.protobuf.Empty){}
  rpc TransferLeadership(TransferRequest)returns(google.protobuf.Empty){}
}

enum TransferStatus {
  Transitioning = 0;
  Finished = 1;
}
enum StartupMode {
  StandAlone = 0;
  Cluster = 1;
}
message TransferRequest {
  string nodeId = 1;
  string nodeAddr = 2;
  int64 term = 3;
  TransferStatus status = 4;
}
message JoinClusterRequest {
  string nodeId = 1;
  string nodeAddr = 2;
  bool autoJoinClusterEnable=3;
  bool isCandidate = 4;
}

// Bring the current node information
message NodeInfoRequest {
  string nodeId = 1;
  string nodeIp = 2;
  uint64 internalPort = 3;
  bool isCandidate = 4;
  bool autoJoinClusterEnable=5;
}

// Reply to the current node information
message NodeInfoResponse {
  string nodeId = 1;
  string nodeIp = 2;
  uint64 internalPort = 3;
  bool isCandidate = 4;
  bool autoJoinClusterEnable=5;
  StartupMode startupMode=6;
}
